# justify-alpha

./: LICENSE  README.md  pyproject.toml
src/justify_alpha/: calculator.py
